[package]
name = "foundry_log_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2", features = ["time_0_3"] }
time = "0.3"

[dev-dependencies]
serde_json = "1"
